# Gemmera

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  projektbeskrivning.md  pyproject.toml  styles.css  vitest.config.ts
.github/workflows/: ci.yml  classifier-regression.yml  release.yml
__mocks__/: obsidian.ts
crates/indexer/: Cargo.toml
crates/indexer/migrations/: 0000_meta.sql  0001_core_schema.sql  0002_jobs_events.sql  README.md
crates/indexer/src/: contracts.rs  db.rs  error.rs  events.rs  frontmatter.rs  jobs.rs  lib.rs  migrations.rs  paths.rs  reranker.rs  tools.rs
crates/indexer/tests/: db.rs  events.rs  frontmatter.rs  jobs.rs  reranker.rs  schema.rs  tools.rs
demo-vault/raw/: boklubbsanteckningar_okt2025.md  bokrecension_mannen-utan-egenskaper.md  bokrecension_projekt-hail-mary.md  bokrecension_the-dispossessed.md  brev_till_erik_2026-01.md  brev_till_petra_2025-08.md  dagbok_2025-03-14.md  dagbok_2025-05-28.md  dagbok_2025-06-01.md  dagbok_2025-10-08.md  dagbok_2025-12-24.md  dagbok_2026-01-15.md  dagbok_2026-03-02.md  laslogg_2025.md  projektanteckningar_bokhylla.md  projektanteckningar_migrering.md  tankar_om_pappa.md  vandringsnoter_sundsvall_harnosand.md
eval/: README.md
eval/classifier-golden/: baseline-mock.json  examples.json  loader.ts
eval/retrieval-golden/: baseline.json  loader.ts
eval/runner/: classify.ts  metrics-store.test.ts  metrics-store.ts  regression-gate.test.ts  regression-gate.ts  retrieval.ts
evals/golden/: README.md  lexical.jsonl  link-structure.jsonl  mixed.jsonl  semantic.jsonl
planning/: classifier.md  overview.md  projektbeskrivning.md  rag.md  runtime.md  tool-loop.md  ui-plugin-plan.md  ui-surfaces.md
planning/decisions/: 01-rust-integration.md
prompts/: dedup-decider.md  dedup-decider.schema.json  ingest-parser.md  ingest-parser.schema.json  intent-classifier.md  intent-classifier.schema.json  note-writer.md  note-writer.schema.json  retrieval-reasoner.md  retrieval-reasoner.schema.json  synthesis-writer.md  synthesis-writer.schema.json
schemas/: frontmatter.schema.json
schemas/gemma-tools/: create_synthesis_note.json  get_note_context.json  index.json  ingest_content.json  rerank_results.json  retrieve_similar_notes.json  save_note.json  search_notes.json  update_index.json
scripts/: create-classifier-issues.sh  create-rag-issues.sh  create-runtime-issues.sh  create-tool-loop-issues.sh  create-ui-plugin-issues.sh  create-ui-surfaces-issues.sh  generate_persona.py
src/: AppendFileModal.ts  CreateFileModal.ts  disambiguation-chip.test.ts  disambiguation-chip.ts  fileops.ts  llm-error.ts  main.ts  message-decoration.test.ts  message-decoration.ts  notices.ts  ollama.ts  search.ts  settings.ts  statusbar.ts  view.test.ts  view.ts
src/contracts/: bm25-index.ts  (+18 more)
tests/: test_cli.py
(+212 files in other folders)
