[workspace]
resolver = "2"
members = [
    "crates/indexer",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.86"
license = "MIT"
repository = "https://github.com/heimdallSWE/Gemmera"

[workspace.dependencies]
# Pinned here so every crate sees the same versions.
duckdb = { version = "1.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
include_dir = "0.7"
sha2 = "0.10"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
