[package]
name = "indexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cowork indexer: DuckDB-backed chunk + embedding store for an Obsidian RAG plugin."

[lib]
name = "indexer"
path = "src/lib.rs"

[dependencies]
duckdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
include_dir = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
