[package]
name = "indexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cowork indexer: DuckDB-backed chunk + embedding store for an Obsidian RAG plugin."

[lib]
name = "indexer"
path = "src/lib.rs"

[dependencies]
duckdb = { workspace = true, features = ["chrono"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
include_dir = { workspace = true }
sha2 = { workspace = true }
once_cell = "1"
ureq = { version = "2", features = ["json"] }
lru = "0.12"
jsonschema = { version = "0.18", default-features = false, features = ["draft202012"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
